# RunAlNur

./: README.md
.cursor/plans/: agent_empire_build_order_6bcce413.plan.md  agentboss_priority_engine_2bf00516.plan.md  agentcoo_priority_engine_3fe38b80.plan.md  agentic_coo_ai_system_026108ab.plan.md  agentwealth_full_system_abb1bf19.plan.md  aladdin-soros_hybrid_engine_fd36de49.plan.md  autonomous_social_autopilot_708149f8.plan.md  capital_raising_system_979b8979.plan.md  clickup_+_runalnur_integration_abf46551.plan.md  clickup_full_setup_automation_90437941.plan.md  clickup_setup_+_integration_9e5f9486.plan.md  command-cockpit-polish_98c8b861.plan.md  commandcockpitux_ce6e659d.plan.md  commandtaskcalendarcockpit_2c4483fd.plan.md  complete_empire_os_75f5352f.plan.md  complete_production_readiness_832e6b50.plan.md  coo_system_completion_2a96582f.plan.md  cross-platform_app_strategy_bf740635.plan.md  dynasty_calendar_&_quest_system_6cdf5e15.plan.md  (+40 more)
runalnur-app/: .vercelignore  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_POST_OPUS_2026-01-17.md  PRODUCTION_AUDIT_TASKS.md  README.md  capacitor.config.js  capacitor.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  vercel.json
runalnur-app/src-tauri/: Cargo.toml  tauri.conf.json
runalnur-app/src-tauri/src/: lib.rs
syndication-resources/: auto-download-all.js  auto-download-current-page.js  batch-download.js  click-download-all.js  download-all-lessons.js  download-all.sh  download-slower.js  download-urls.json  extract-downloads.js  organize-downloads.sh
(+406 files in other folders)
